# ROS_speech_recognition

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: docker-publish.yml
audio_capture/: CMakeLists.txt  package.xml
audio_capture/launch/: capture.launch  capture_to_file.launch  capture_wave.launch
audio_play/: CMakeLists.txt  package.xml
audio_play/launch/: play.launch
audio_play/src/: audio_play.cpp
sound_play/: CMakeLists.txt  package.xml
sound_play/include/sound_play/: sound_play.h
sound_play/launch/: soundplay_node.launch  test.launch
sound_play/scripts/: is_speaking.py  play.py  robot_speech.py
sound_play/src/sound_play/: libsoundplay.py
sound_play/test/: test.cpp
speech_capture/audio_capture/src/: audio_capture.cpp
speech_recognition/: CMakeLists.txt  package.xml  setup.py
speech_recognition/models/commands/: .index  model4_speech_categories_12_model.h5
speech_recognition/scripts/: all_models.py  deep_learning_model.py  deep_q_learning.py  header_imports.py  speech_detection_analysis.py  speech_model_building.py  speech_model_classification.py  speech_model_training.py  speech_model_transfer_learning.py
speech_recognition/scripts/model_summary/: model1_summary_architecture.txt  model1_summary_architecture_19.txt  model1_summary_architecture_3.txt  model2_summary_architecture.txt  model2_summary_architecture_12.txt  model2_summary_architecture_19.txt  model2_summary_architecture_3.txt  model3_summary_architecture.txt  model3_summary_architecture_19.txt  model4_summary_architecture_12.txt  model4_summary_architecture_19.txt  model4_summary_architecture_3.txt  model5_summary_architecture_3.txt
speech_recognition/scripts/speech_recognition_system/: deep_learning_model.py  plot_and_animation.py  speech_continuous_learning.py  speech_model_building.py  speech_model_classification.py  speech_model_training.py  speech_model_transfer_learning.py
