<?xml version="1.0"?>

<package format="2">
  <name>sound_play</name>
  <version>0.3.12</version>
  <description>plays sound</description>

  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>festival</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>audio_common_msgs</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>festival</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-alsa</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>festival</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp" />
  </export>
</package>
